--- a/views/add-book.ejs
+++ b/views/add-book.ejs
@@ -59,6 +59,7 @@
             </div>
         </div>
     </main>
+    <a class="btn text-bg-primary position-fixed top-0 end-0 m-1 p-2 rounded-circle d-flex justify-content-center align-items-center" style="width: 2.5em;height: 2.5em;" role="button" href="/admin-panel"><i class="bi bi-person-gear"></i></a>
     <script src="/assets/js/bootstrap.bundle.min.js"></script>
     <script src="/assets/js/error.js"></script>
 </body>
