--- a/views/delete-book.ejs
+++ b/views/delete-book.ejs
@@ -26,6 +26,7 @@
             <div class="text-center"><a href="/admin-panel/books" class="btn bg-primary text-light w-100" role="button">Tüm Kitapları Listele</a></div>
         </div>
     </main>
+    <a class="btn text-bg-primary position-fixed top-0 end-0 m-1 p-2 rounded-circle d-flex justify-content-center align-items-center" style="width: 2.5em;height: 2.5em;" role="button" href="/admin-panel"><i class="bi bi-person-gear"></i></a>
     <script src="/assets/js/bootstrap.bundle.min.js"></script>
     <script src="/assets/js/error.js"></script>
 </body>
