--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,7 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="index, follow">
+    <meta name="description" content="Ekin'in proje geliştirme sitesi, çeşitli projeler ve geliştirme araçları sunmaktadır. Bu site kitap bilgi portalı projesidir..">
+    <meta name="keywords" content="ekin, ekinn, ekinin sitesi, ekin site, proje geliştirme, sohbet uygulaması, blog paylaşımı, web projeleri, yazılım geliştirme">
     <meta name="theme-color" content="#0d6efd">
+    <meta name="apple-mobile-web-app-title" content="Ekin'in Sitesi">
+    <meta property="og:title" content="Ekin'in Proje Geliştirme Sitesi">
+    <meta property="og:description" content="Ekin'in kitap bilgi portalı projesi">
+    <meta property="og:image" content="https://book.ekinn.site/assets/img/ekinnsite_logo.png">
+    <meta property="og:url" content="https://book.ekinn.site">
     <title><%= title %> - Muhteşem Kitap Sitesi</title>
     <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="/assets/icons/bootstrap-icons.css">
