added admin users page

--- a/views/admin-panel.ejs
+++ b/views/admin-panel.ejs
@@ -14,7 +14,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="/admin-panel/users">
                             <i class="bi bi-people"></i> Kullanıcılar
                         </a>
                     </li>
@@ -60,7 +60,7 @@
                             <div class="card-body">
                                 <h5 class="card-title"><i class="bi bi-people-fill"></i> Kullanıcılar</h5>
                                 <p class="card-text">Toplam <%= statistics.totalUser %> kişi</p>
-                                <a href="#" class="btn btn-light">Tümünü Görüntüle</a>
+                                <a href="/admin-panel/users" class="btn btn-light">Tümünü Görüntüle</a>
                             </div>
                         </div>
                     </div>
