--- a/views/users.ejs
+++ b/views/users.ejs
@@ -1,6 +1,6 @@
 <body>
     <main class="container-md py-4">
-        <h2 class="mb-3">Tüm Kullanıcılar (<%= statistics.totalUser %> kişi)</h2>
+        <h2 class="mb-3">Üye Listesi (<%= statistics.totalUser %> kişi)</h2>
         <% if(users.length > 0) { %>
             <div class="overflow-x-auto">
                 <table class="table table-striped">
