--- a/views/admin-panel.ejs
+++ b/views/admin-panel.ejs
@@ -15,7 +15,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/admin-panel/users">
-                            <i class="bi bi-people"></i> Kullanıcılar
+                            <i class="bi bi-people"></i> Üyeler
                         </a>
                     </li>
                     <li class="nav-item">
@@ -58,7 +58,7 @@
                     <div class="col-lg-4 col-md-6 mb-4">
                         <div class="card text-white bg-primary">
                             <div class="card-body">
-                                <h5 class="card-title"><i class="bi bi-people-fill"></i> Kullanıcılar</h5>
+                                <h5 class="card-title"><i class="bi bi-people-fill"></i> Üyeler</h5>
                                 <p class="card-text">Toplam <%= statistics.totalUser %> kişi</p>
                                 <a href="/admin-panel/users" class="btn btn-light">Tümünü Görüntüle</a>
                             </div>
