--- a/views/account.ejs
+++ b/views/account.ejs
@@ -84,7 +84,7 @@
                 <button class="nav-link" id="avatar-tab" data-bs-toggle="tab" data-bs-target="#avatar-tab-pane" type="button" role="tab" aria-controls="avatar-tab-pane" aria-selected="false"><i class="bi bi-person-square"></i> Avatarını Değiştir</button>
             </li>
             <li class="nav-item" role="presentation">
-              <button class="nav-link" id="password-tab" data-bs-toggle="tab" data-bs-target="#password-tab-pane" type="button" role="tab" aria-controls="password-tab-pane" aria-selected="false"><i class="bi bi-lock"></i> Şifre İşlemleri</button>
+              <button class="nav-link" id="password-tab" data-bs-toggle="tab" data-bs-target="#password-tab-pane" type="button" role="tab" aria-controls="password-tab-pane" aria-selected="false"><i class="bi bi-lock-fill"></i> Şifre İşlemleri</button>
             </li>
             <li class="nav-item" role="presentation">
               <button class="nav-link" id="other-tab" data-bs-toggle="tab" data-bs-target="#other-tab-pane" type="button" role="tab" aria-controls="other-tab-pane" aria-selected="false"><i class="bi bi-three-dots"></i> Diğer İşlemler</button>
