--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -14,6 +14,10 @@ textarea {
   flex-wrap: nowrap !important;
 }
 
+.nav-tabs .nav-item {
+  min-width: 120px !important;
+}
+
 .sidebar {
   height: 100vh;
 }
