--- a/views/account.ejs
+++ b/views/account.ejs
@@ -46,7 +46,7 @@
         <% if(query.message === "success") { %>
             <div class="container-fluid my-1">
                 <div class="alert alert-success" role="alert">
-                    Değişikler başarıyla kaydedildi
+                    Değişiklikler başarıyla kaydedildi
                 </div>
             </div>
         <% } else if(query.message === "wrong-password") { %>
@@ -82,7 +82,7 @@
         <% } %>
         <div class="container-fluid my-1 alert-saved d-none">
             <div class="alert alert-success" role="alert">
-                Değişikler başarıyla kaydedildi
+                Değişiklikler başarıyla kaydedildi
             </div>
         </div>
         <ul class="nav nav-tabs align-items-center" id="accountTabs" role="tablist">
