--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -3,6 +3,28 @@ body {
   min-height: 100vh;
 }
 
+/* Kaydırma çubuğunun tüm öğesini tanımlar */
+::-webkit-scrollbar {
+  width: 8px; /* Dikey kaydırma çubuğunun genişliği */
+  height: 5px; /* Yatay kaydırma çubuğunun yüksekliği */
+}
+
+/* Kaydırma çubuğunun "kulp" (thumb) kısmını tanımlar */
+::-webkit-scrollbar-thumb {
+  background-color: #0d6efd; /* Kulp rengini belirler */
+}
+
+/* Kaydırma çubuğunun "track" (arka plan) kısmını tanımlar */
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1; /* Track arka plan rengini belirler */
+  border-radius: 10px; /* Kenarları yuvarlatır */
+}
+
+/* Kaydırma çubuğunun üzerine gelindiğinde kulpun rengini değiştirir */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #3a87fc; /* Kulp üzerine gelindiğinde renk değişir */
+}
+
 textarea {
   min-height: 150px !important;
   max-height: 300px !important;
