added more avatars

--- a/views/account.ejs
+++ b/views/account.ejs
@@ -153,6 +153,9 @@
                             <option value="5">Şimşek Lordu</option>
                             <option value="6">Süper Araba</option>
                             <option value="7">Korsan Yunus</option>
+                            <option value="8">Cadıların İksir Gecesi</option>
+                            <option value="9">Kadın Korsan</option>
+                            <option value="10">Erkek Korsan</option>
                         </select>
                     </li>
                 </ul>
