--- a/views/login.ejs
+++ b/views/login.ejs
@@ -45,10 +45,14 @@
                     <label for="userEmailInput">E-postanız <span class="text-danger">*</span></label>
                 </div>
 
-                <div class="form-floating mb-3">
-                    <input type="password" name="userPassword" class="form-control" id="userPasswordInput" placeholder="Enter Your Password" required>
-                    <label for="userPasswordInput">Şifreniz <span class="text-danger">*</span></label>
+                <div class="input-group mb-3">
+                    <div class="form-floating">
+                        <input type="password" name="userPassword" class="form-control" id="userPasswordInput" placeholder="Enter Your Password" required>
+                        <label for="userPasswordInput">Şifreniz <span class="text-danger">*</span></label>
+                    </div>
+                    <button class="btn password-show-hide-toggle" type="button" style="background-color: #d3d4d5;"><i class="bi bi-eye-fill"></i></button>
                 </div>
+                
                 <div class="row mb-2">
                     <div class="col text-danger">(*) zorunlu</div>
                 </div>
@@ -61,4 +65,5 @@
     </main>
     <script src="/assets/js/bootstrap.bundle.min.js"></script>
     <script src="/assets/js/error.js"></script>
+    <script src="/assets/js/login.js"></script>
 </body>
