--- a/views/book-detail.ejs
+++ b/views/book-detail.ejs
@@ -20,7 +20,7 @@
                         <span><strong>Yazar: </strong> <%= book.author %></span>
                     </div>
                     <div class="col">
-                        <span><strong>Kitap Eklenme Tarihi: </strong><%= new Date(book.added_at).toLocaleString('tr-TR', { day: 'numeric', month: 'long', year: 'numeric', hour: '2-digit', minute: '2-digit' }) %></span>
+                        <span><strong>Kitap Eklenme Tarihi: </strong><%= new Date(book.added_at + " UTC").toLocaleString('tr-TR', { day: 'numeric', month: 'long', year: 'numeric', hour: '2-digit', minute: '2-digit', timeZone: 'Asia/Istanbul' }) %></span>
                     </div>
                 </div>
                 <div class="row my-2 border border-dark-subtle rounded-3 p-3">
