--- a/views/admin/book-detail.ejs
+++ b/views/admin/book-detail.ejs
@@ -3,7 +3,7 @@
     <div class="container-fluid my-1">
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="/books">Kitaplar</a></li>
+                <li class="breadcrumb-item"><a href="/admin-panel/books">Kitaplar</a></li>
                 <li class="breadcrumb-item active" aria-current="page"><%= book.name %></li>
             </ol>
         </nav>
@@ -87,5 +87,6 @@
         </div>
     </div>
 </main>
+<a class="btn text-bg-primary position-fixed top-0 end-0 m-1 p-2 rounded-circle d-flex justify-content-center align-items-center" style="width: 2.5em;height: 2.5em;" role="button" href="/admin-panel"><i class="bi bi-person-gear"></i></a>
 <script src="/assets/js/bootstrap.bundle.min.js"></script>
 <script src="/assets/js/comment.js"></script>
