--- a/views/admin/search.ejs
+++ b/views/admin/search.ejs
@@ -3,7 +3,7 @@
     <div class="container-fluid my-1">
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="/books">Kitaplar</a></li>
+                <li class="breadcrumb-item"><a href="/admin-panel/books">Kitaplar</a></li>
                 <li class="breadcrumb-item active" aria-current="page">Kitap Ara</li>
             </ol>
         </nav>
@@ -11,7 +11,7 @@
     <div class="container-fluid">
         <h1>Kitap Ara</h1>
 
-        <form action="/books/search" method="POST" class="form-floating my-2">
+        <form action="/admin-panel/books/search" method="POST" class="form-floating my-2">
             <div class="form-floating mb-2">
                 <input type="search" name="searchTerm" class="form-control" id="searchBookInput" placeholder="Search" required>
                 <label for="searchBookInput">Kitap Adı veya Yazar Adı</label>
@@ -19,7 +19,7 @@
 
         <button class="btn btn-outline-primary w-100 my-2" type="submit"><i class="bi bi-search"></i> Kitap Ara</button>
         </form>
-        <a href="/books" class="btn bg-primary text-light mb-5 w-100" role="button">Geri Dön</a>
+        <a href="/admin-panel/books" class="btn bg-primary text-light mb-5 w-100" role="button">Geri Dön</a>
         <h3><b>
             <%if(typeof results !== "undefined") {%>
             <%= "Sonuçlar (" + (results.length > 0 ? results.length + ' adet)' : 'Sonuç Yok)') %>
@@ -52,7 +52,13 @@
                             <div class="col-4 col-sm-5 col-md-6 d-flex justify-content-end align-items-center">
                                 <div class="row d-flex flex-column flex-sm-row justify-content-end align-items-center g-1">
                                     <div class="col">
-                                        <a href="/books/<%= book.id %>" class="btn bg-success"><i class="bi bi-box-arrow-right text-light"></i></a>
+                                        <a href="/admin-panel/books/<%= book.id %>" class="btn bg-success"><i class="bi bi-box-arrow-right text-light"></i></a>
+                                    </div>
+                                    <div class="col">
+                                        <a href="/admin-panel/books/edit-book/<%= book.id %>" class="btn bg-warning"><i class="bi bi-pencil-square"></i></a>
+                                    </div>
+                                    <div class="col">
+                                        <a href="/admin-panel/books/delete-book/<%= book.id %>" class="btn bg-danger text-light"><i class="bi bi-trash"></i></a>
                                     </div>
                                 </div>
                             </div>
