--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -17,4 +17,52 @@
     <link rel="stylesheet" href="/assets/icons/bootstrap-icons.css">
     <link rel="stylesheet" href="/assets/css/main.css">
     <link rel="icon" type="image/x-icon" href="/assets/icons/ekinnsite_logo.ico">
+    <style>body{padding-top: 4rem !important;}</style>
+    <script src="/assets/js/header.js"></script>
 </head>
+<body>
+    <nav class="navbar fixed-top navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/">
+            <img src="/assets/img/ekinnsite_logo.png" alt="book.ekinn.site Logo" height="40">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="/" data-path="/">Ana Sayfa</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/books" data-path="/books">Kitaplar</a>
+              </li>
+            </ul>
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="javascript:void(0);" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <% if(userFirstname) { %>
+                            <img class="rounded-circle avatar-img" src="/assets/img/avatars/<%= avatar %>.png" width="24"> <%= userFirstname %>
+                        <% } else { %>
+                            <i class="bi bi-person-circle"></i>
+                        <% } %>
+                    </a>
+                    <ul class="dropdown-menu dropdown-menu-end">
+                        <% if(isAuthenticated) { %>
+                            <li><a class="dropdown-item" href="/account">Hesabım</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li>
+                                <a class="nav-link link-danger ms-2" href="/logout">
+                                    <i class="bi bi-box-arrow-right"></i> Çıkış Yap
+                                </a>
+                            </li>
+                        <% } else { %>
+                            <li><a class="dropdown-item" href="/login">Giriş Yap</a></li>
+                            <li><a class="dropdown-item" href="/register">Üye Ol</a></li>
+                        <% } %>
+                    </ul>
+                </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
